# blockchain-contracts

./: .gitignore  .mergify.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  bors.toml
.circleci/: config.yml
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: CI.yml
lib/: Cargo.toml
lib/src/: fit_into_placeholder_slice.rs
lib/src/bitcoin/: hbit.rs  mod.rs
lib/src/bitcoin/witness/: mod.rs  p2wpkh.rs  primed_transaction.rs  pubkey_hash.rs
lib/src/ethereum/: herc20.rs  heth.rs  mod.rs
lib/tests/: bitcoin_witness_p2wpkh.rs  bitcoin_witness_sign_with_rate.rs  hbit.rs  herc20.rs
lib/tests/bitcoin_helper/: mod.rs
lib/tests/ethereum_helper/: to_ethereum_address.rs  transaction.rs
lib/tests/htlc_harness/: ether_harness.rs
print_offsets/: Cargo.toml
print_offsets/herc20_template/: config.json
print_offsets/heth_template/: config.json
print_offsets/src/: main.rs
print_offsets/src/calculate_offsets/: metadata.rs  mod.rs  placeholder_config.rs
print_offsets/src/calculate_offsets/bitcoin/: compile_contract.rs  mod.rs
print_offsets/src/calculate_offsets/ethereum/: compile_contract.rs  contract.rs  mod.rs
src/: fit_into_placeholder_slice.rs  lib.rs
src/bitcoin/: hbit.rs  mod.rs
src/bitcoin/rfc003/: bitcoin_htlc.rs
src/bitcoin/witness/: mod.rs  primed_transaction.rs  pubkey_hash.rs
src/ethereum/: mod.rs
src/ethereum/rfc003/: erc20_htlc.rs  ether_htlc.rs  mod.rs
src/rfc003/: mod.rs  secret.rs  secret_hash.rs
tests/: bitcoin_htlc.rs  bitcoin_witness_p2wpkh.rs  bitcoin_witness_sign_with_rate.rs  erc20_htlc.rs  heth.rs  rfc003_bitcoin_htlc.rs  rfc003_erc20_htlc.rs  rfc003_ether_htlc.rs
tests/bitcoin_helper/: mod.rs
tests/htlc_harness/: erc20_harness.rs  ether_harness.rs
tests/parity_client/: mod.rs  parity_client.rs
