[package]
name = "blockchain_contracts"
version = "0.1.0"
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"

[dependencies]
binary_macros = "0.6"
hex = "0.3"
rand = "0.4"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = "=0.5.0"

[build-dependencies]
regex = "1.1"
