[package]
name = "blockchain_contracts"
version = "0.1.0"
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"
description = "Blockchain contracts used by COMIT-network daemons to execute cryptographic protocols."
homepage = "https://comit.network/"
repository = "https://github.com/comit-network/blockchain-contracts"
keywords = ["atomic-swaps", "blockchain", "cryptocurrencies", "comit", "htlc"]
categories = ["cryptography::cryptocurrencies"]
readme = "./README.md"
license-file = "./LICENSE.md"

[dependencies]
byteorder = "1.3"
hex = "0.4"
hex-literal = "0.2"
itertools = "0.8.0"
regex = "1.3"
rust_bitcoin = { version = "0.19.1", package = "bitcoin", features = ["use-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = "2.0"

[dev-dependencies]
failure = "0.1"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.3"
reqwest = { version = "0.10", features = ["json", "blocking"] }
rust-crypto = "0.2"
spectral = "0.6"
testcontainers = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }
web3 = { version = "0.9", default-features = false, features = ["http"] }

# These versions need to be changed together with web3, depends on what version of primitive-types ships with web3
[dev-dependencies.primitive-types]
features = ["rlp"]
version = "0.5.0"

[dev-dependencies.rlp]
version = "0.4.2"

[build-dependencies]
regex = "1.3"
